force-app/zurich-base/main/default/objects/ExternalJobQueueBatch__mdt/ExternalJobQueueBatch__mdt.object-meta.xml
<CustomObject>
    <label>External Job Queue Batch</label>
    <pluralLabel>External Job Queue Batch</pluralLabel>
</CustomObject>