force-app/zurich-base/main/default/objects/ExternalJobQueueBatch__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <default>true</default>
                <label>100</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>