force-app/zurich-base/main/default/objects/ExternalJobQueueBatch__mdt/fields/Retries__c.field-meta.xml
<CustomField>
    <fullName>Retries__c</fullName>
    <label>Retries</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>